--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.2.1",
     "morgan": "^1.10.0",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "xss-clean": "^0.1.4"
   }
 }
